[tool.poetry]
name = "naver_comment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.25.1"
selenium = "^3.141.0"
pytesseract = "^0.3.7"
Pillow = "^8.2.0"
pyinstaller = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
